# openclaw-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  assistant.py  config.py  pyproject.toml  tts_pipeline.py
.github/workflows/: ci.yml
docs/: architecture.md  diagnostics.md  plugin-development.md
docs/decisions/: 0001-runtime-pipeline.md  0002-plugin-contracts.md
launchd/: com.openclaw.assistant.plist
onboard/: diagnostics.py  setup.py  update.py
scripts/: bootstrap_dev.sh  run_local_checks.sh  setup.py  setup.sh
src/openclaw_assistant/: __init__.py  __main__.py
src/openclaw_assistant/adapters/audio/: input_stream.py  output_stream.py
src/openclaw_assistant/adapters/gateway/: openclaw_http.py
src/openclaw_assistant/adapters/stt/: faster_whisper.py
src/openclaw_assistant/adapters/tts/: kokoro.py
src/openclaw_assistant/adapters/wakeword/: porcupine.py
src/openclaw_assistant/app/: lifecycle.py  runner.py
src/openclaw_assistant/commands/: __init__.py  diagnostics.py  run.py  setup.py  update.py
src/openclaw_assistant/config/: loader.py  settings.py
src/openclaw_assistant/core/: context.py  contracts.py  events.py  pipeline.py
src/openclaw_assistant/observability/: logging.py  metrics.py  tracing.py
src/openclaw_assistant/plugins/: registry.py
src/openclaw_assistant/plugins/builtin/: action_stage.py  listen_stage.py  speak_stage.py  transcribe_stage.py  wakeword_listener.py
tests/integration/diagnostics/: test_cli_routes.py
tests/integration/pipeline/: test_pipeline_noop.py
tests/unit/adapters/: test_openclaw_http.py
tests/unit/config/: test_settings_validation.py
tests/unit/core/: test_pipeline.py
tests/unit/plugins/: test_registry.py
upgrades/: silence_recording.md
