[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "openclaw-assistant"
version = "0.2.0"
description = "Deterministic local macOS OpenClaw voice assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro-onnx>=0.4.9",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
]

[project.scripts]
openclaw = "openclaw_assistant.commands:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "types-requests>=2.32.0.20250328",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_assistant"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/openclaw_assistant --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks integration tests",
    "hardware: marks tests requiring audio hardware",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openclaw_assistant.core.*"]
strict = true
